Create update product function

--- a/admin/app/view/index.html
+++ b/admin/app/view/index.html
@@ -47,7 +47,6 @@
       <table class="product-table">
         <thead>
           <tr>
-            <th><input type="checkbox" /></th>
             <th>ID</th>
             <th>Name</th>
             <th>Price</th>
@@ -67,7 +66,7 @@
     <!-- Modal Structure -->
     <div id="productModal" class="modal">
       <div class="modal__content">
-        <h2 class="modal__title">Add New Product</h2>
+        <h2 class="modal__title" id="modal-title">Add New Product</h2>
         <form id="productForm" action="" method="POST">
           <input type="hidden" id="id" name="id" value="" />
 
