--- a/store/assets/css/main.css
+++ b/store/assets/css/main.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 * {
   margin: 0;
   padding: 0;
@@ -37,7 +36,9 @@ p {
   --text-color: #333;
   --navbar-height: 34px;
   --header-height: 120px;
-  --header-with-search-height: calc(var(--navbar-height)-var(--header-height));
+  --header-with-search-height: calc(
+      var(--navbar-height)-var(--header-height)
+  );
 }
 
 .header {
@@ -363,78 +364,166 @@ p {
   margin-left: 280px;
 }
 
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+} 
+.minicart {
+  padding: 0 10px;
+  background: transparent;
+  border: unset;
+  position: relative;
+}
+.minicart .cart-count {
+  color: #fff;
+  position: absolute;
+  top: -12px;
+  left: 20px;
+  font-size: 13px;
+  font-weight: 700;
+}
+
 .cart-container {
   display: none;
   position: fixed;
   top: 50%;
   left: 50%;
+  width: 700px;
   transform: translate(-50%, -50%);
-  width: 400px;
-  background-color: #333;
-  color: white;
+  background-color: #fff;
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
   z-index: 10;
 }
-
 .cart-container h2 {
   text-align: center;
+  margin-bottom: 20px;
+  font-size: 2rem;
 }
-
-.cart-item {
+.cart-container .cart-item p {
+  font-size: 1.2em;
+}
+.cart-container .cart-item table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-bottom: 20px;
+}
+.cart-container .cart-item th,
+.cart-container .cart-item td {
+  padding: 12px 15px;
+  text-align: left;
+}
+.cart-container .cart-item th {
+  font-size: 1.2em;
+  background-color: #f4f4f4;
+  font-weight: bold;
+}
+.cart-container .cart-item td {
+  vertical-align: middle;
+}
+.cart-container .cart-item tbody tr {
+  border-bottom: 1px solid #ddd;
+}
+.cart-container .cart-item tbody tr:last-child {
+  border-bottom: none;
+}
+.cart-container .cart-item .product-name {
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
   align-items: center;
-  margin-bottom: 15px;
+  gap: 10px;
 }
-
-.cart-item p {
+.cart-container .cart-item .qty {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+}
+.cart-container .cart-item .qty-btn {
+  background-color: #f1f1f1;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  width: 35px;
+  height: 35px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.cart-container .cart-item .qty-btn:hover {
+  background-color: #ddd;
+}
+.cart-container .cart-item .qty-input {
+  width: 50px;
+  height: 35px;
+  text-align: center;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 16px;
+  padding: 0;
   margin: 0;
+  line-height: 35px;
 }
-
-.cart-item .quantity {
-  display: flex;
-  align-items: center;
-}
-
-.cart-item .quantity span {
-  cursor: pointer;
-  padding: 0 10px;
-}
-
-.cart-actions {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 20px;
-}
-
-.cart-actions button {
-  padding: 10px 20px;
-  cursor: pointer;
+.cart-container .btn-remove {
+  background-color: #ff4d4d;
+  color: white;
   border: none;
+  padding: 5px 10px;
+  cursor: pointer;
   border-radius: 5px;
 }
-
-.purchase-btn {
-  background-color: #4CAF50;
-  color: white;
+.cart-container .btn-remove:hover {
+  background-color: #ff1a1a;
 }
-
-.clear-cart-btn {
-  background-color: #f44336;
-  color: white;
+.cart-container input[type=number] {
+  width: 60px;
+  padding: 5px;
+  text-align: center;
+  border: 1px solid #ccc;
+  border-radius: 5px;
 }
-
-/* CSS cho nút X để đóng giỏ hàng */
-.close-btn {
+.cart-container .purchase-btn,
+.cart-container .clear-cart-btn {
+  background-color: #4caf50;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  cursor: pointer;
+  border-radius: 5px;
+  margin-right: 10px;
+}
+.cart-container .purchase-btn:hover,
+.cart-container .clear-cart-btn:hover {
+  background-color: #45a049;
+}
+.cart-container .clear-cart-btn {
+  background-color: #ff4d4d;
+}
+.cart-container .clear-cart-btn:hover {
+  background-color: #ff1a1a;
+}
+.cart-container .total-amount {
+  text-align: right;
+  font-size: 1.7em;
+  font-weight: bold;
+  color: #333;
+  padding: 10px;
+}
+.cart-container .close-btn {
   background-color: transparent;
   color: white;
   border: none;
   font-size: 24px;
   cursor: pointer;
   position: absolute;
-  top: 10px;
+  top: -30px;
   right: 10px;
 }
 
@@ -448,13 +537,4 @@ p {
   background-color: rgba(0, 0, 0, 0.7);
   display: none;
   z-index: 5;
-}
-
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-} /*# sourceMappingURL=main.css.map */
+}/*# sourceMappingURL=main.css.map */
