--- a/store/assets/sass/Components/_cart.scss
+++ b/store/assets/sass/Components/_cart.scss
@@ -26,6 +26,8 @@
     border-radius: 10px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
     z-index: 10;
+    max-height: calc(100vh - 210px);
+    overflow-y: auto;
 
     h2 {
         text-align: center;
