--- a/store/app/view/index.html
+++ b/store/app/view/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <div class="app">
+    <div  class=".cart-container">
         <header class="header">
             <div class="grid">
              
