--- a/store/app/view/index.html
+++ b/store/app/view/index.html
@@ -30,10 +30,13 @@
 
     <body>
         <div class="app">
+            
             <header class="header">
+                <h2 id="text-brand">Cyber Phone</h2>
                 <div class="grid">
+                    
                     <div class="header-with-search">
-                        <h2>Cyber Phone</h2>
+                    
                         <div class="header__search">
                             <input
                                 type="text"
@@ -108,13 +111,7 @@
                                 </button>
                             </div>
                         </div>
-                        <!-- <div class="header__cart">
-                        <span class="header__cart-number" id="cart-number">0</span>
-                        <i class="header__cart-icon fa-solid fa-cart-shopping"></i>
-                        <div id="cart-list" class="dropdown-content">
-                            <button class="btn_cancel">x</button>
-                        </div>
-                    </div> -->
+                       
                     </div>
                 </div>
             </header>
