--- a/store/assets/sass/main.scss
+++ b/store/assets/sass/main.scss
@@ -1,12 +1,5 @@
 
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}/*# sourceMappingURL=index.css.map */
+/*# sourceMappingURL=index.css.map */
 
 @import "./Components/cart";
 @import "./Components/responsive";
