--- a/store/assets/css/main.css
+++ b/store/assets/css/main.css
@@ -1,11 +1,4 @@
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-} 
+
 .minicart {
   padding: 0 10px;
   background: transparent;
@@ -175,6 +168,14 @@
   z-index: 5;
 }
 
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
 @media (max-width: 1200px) {
   .grid {
     width: 90%;
@@ -193,6 +194,10 @@
   }
   .header__logo {
     width: 150px;
+  }
+  #product-list {
+    display: grid;
+    grid-template-columns: 1fr;
   }
   .product-item {
     grid-template-columns: repeat(2, 1fr);
@@ -225,12 +230,9 @@
   .header__search-input {
     font-size: 1.2rem;
   }
-  .header__logo {
-    width: 120px;
-  }
   .header__search {
     width: 90%;
-    margin-top: 10px;
+    margin-top: -20px;
   }
   .product-item {
     grid-template-columns: 1fr;
@@ -252,6 +254,16 @@
   height: 120px;
   background-image: linear-gradient(0, #d70018, #2a73dc);
   max-width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+#text-brand {
+  font-size: 24px;
+  color: white;
+  margin-bottom: 10px;
+  flex: none;
+  margin-top: 50px;
 }
 
 .header__navbar {
