--- a/store/assets/sass/Components/_responsive.scss
+++ b/store/assets/sass/Components/_responsive.scss
@@ -1,4 +1,13 @@
 
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
 @media (max-width: 1200px) {
     .grid {
       width: 90%;
@@ -8,6 +17,7 @@
       grid-template-columns: repeat(3, 1fr);
     }
   }
+  
   
 
   @media (max-width: 768px) {
@@ -19,9 +29,15 @@
       font-size: 1.3rem;
     }
   
+
     .header__logo {
       width: 150px;
     }
+    #product-list{
+   display: grid;
+   grid-template-columns: 1fr;
+    }
+    
   
     .product-item {
       grid-template-columns: repeat(2, 1fr);
@@ -32,6 +48,7 @@
     .header__cart {
       width: 100%;
     }
+    
   
     .footer-content {
       flex-direction: column;
@@ -62,13 +79,10 @@
       font-size: 1.2rem;
     }
   
-    .header__logo {
-      width: 120px;
-    }
   
     .header__search {
       width: 90%;
-      margin-top: 10px;
+      margin-top: -20px;
     }
   
     .product-item {
